@@ -1,2 +1,1 @@
-SUBDIRS = bench fem mesh ode poisson quadrature solvers scripting
-#SUBDIRS = bench fem la mesh ode poisson quadrature solvers
+SUBDIRS = bench fem mesh ode poisson quadrature solvers
